fix transcript action

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "start": "node build/index.js",
     "test": "node temp/test-transcript.js",
     "test-mcp": "node temp/test-mcp-server.js",
+    "cli": "node cli.js",
     "prepare": "npm run build"
   },
   "keywords": [
@@ -22,7 +23,9 @@
   "license": "MIT",
   "dependencies": {
     "@modelcontextprotocol/sdk": "^1.0.0",
-    "youtube-transcript": "^1.2.1"
+    "axios": "^1.11.0",
+    "commander": "^14.0.0",
+    "dotenv": "^17.2.1"
   },
   "devDependencies": {
     "@types/node": "^20.0.0",
