--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
 # RapidAPI Configuration for YouTube Transcripts
 # Get your API key from: https://rapidapi.com/8v2FWW4H6AmKw89/api/youtube-transcripts
 RAPIDAPI_KEY=your_rapidapi_key_here
+YOUTUBE_API_KEY=
