feat: implement database service for video summaries
- Add DatabaseService class for managing video summaries using libsql
- Include methods for initializing the database, storing, fetching, and deleting video summaries
- Update .gitignore to exclude database files
- Add @libsql/client dependency to package.json
- Integrate database service into YouTubeToolsServer for summary management

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "@libsql/client": "^0.15.14",
     "@modelcontextprotocol/sdk": "^1.0.0",
     "axios": "^1.11.0",
     "commander": "^14.0.0",
