update .env.example and README

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,12 @@
+# YouTube Data API v3 Configuration
+# Get your API key from: https://console.cloud.google.com/
+YOUTUBE_API_KEY=your_youtube_api_key_here
+
 # RapidAPI Configuration for YouTube Transcripts
 # Get your API key from: https://rapidapi.com/8v2FWW4H6AmKw89/api/youtube-transcripts
 RAPIDAPI_KEY=your_rapidapi_key_here
-YOUTUBE_API_KEY=
+
+# Database Configuration (Optional)
+# Path to the libsql database file for storing video summaries
+# If not specified, defaults to 'video_summaries.db' in the project root
+DATABASE_PATH=./video_summaries.db
